--- a/public/popup.html
+++ b/public/popup.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="choose_beast.css" />
+    <!-- <link rel="stylesheet" href="choose_beast.css" /> -->
   </head>
 
   <body>
     <div id="popup-content">
-      <button>Frog</button>
+      <button id="btn">Frog</button>
       <button>Turtle</button>
       <button>Snake</button>
       <button type="reset">Reset</button>
@@ -16,6 +16,6 @@
       <p>Can't beastify this web page.</p>
       <p>Try a different page.</p>
     </div>
-    <script src="choose_beast.js"></script>
+    <script src="popup.js"></script>
   </body>
 </html>
